--- a/Portfolio.html
+++ b/Portfolio.html
@@ -159,7 +159,7 @@
             <p class="year">2005-2019</p>
             <br/>
             <p><u> PES University, RR Campus</u></p>
-            <p class="content"> Semester 1- 8.36 SGPA; Was awarded Distinction  </p>
+            <p class="content"> Semester 1- Was awarded Distinction  </p>
             <p class="year">2019-2023</p>
             <br/>
             <p class="lead">Certifications</p>
